--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,24 @@
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+pre {
+  font-size: 22px;
+  letter-spacing: 3px;
+}
 
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+canvas {
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -o-crisp-edges;
+  image-rendering: crisp-edges;
+  -ms-interpolation-mode: nearest-neighbor;
+}
+svg {
+  cursor: pointer;
+}
+.jumbotron {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
