Countdown entre claqueta y prueba

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ canvas {
   image-rendering: crisp-edges;
   -ms-interpolation-mode: nearest-neighbor;
 }
-svg {
+#clapperboard {
   cursor: pointer;
 }
 .jumbotron {
