--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,6 @@ body {
   transition: all 0.5s ease-in-out;
   transition: color 0.25s ease-in-out;
 }
-pre {
-  font-size: 22px;
-  letter-spacing: 3px;
-}
-
 canvas {
   image-rendering: optimizeSpeed;
   image-rendering: -moz-crisp-edges;
@@ -20,8 +15,28 @@ canvas {
 #clapperboard {
   cursor: pointer;
 }
+/*Reescritura Bootstrap*/
 .jumbotron {
   padding-top: 5px;
   padding-bottom: 5px;
+  margin-bottom: 10px;
   transition: all 0.5s ease-in-out;
+}
+pre {
+  font-size: 16px;
+  letter-spacing: 3px;
+  padding:5.5px
+}
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.jumbotron h1,
+.jumbotron .h1 {
+  font-size: 21px;
 }
